--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
  <meta name="description" content="DataMadang: explore Federal Reserve (FRED) indicators, World Bank global data, U.S. mortgage rates, CD rates, and Housing Price Index with clear explanations and quick links to live dashboards. Global economic data hub." />
  <meta name="robots" content="index, follow, max-image-preview:large" />
- <meta name="keywords" content="datamadang, data madang, data_madang, data-madang, datamdag, datamading, datamadnag, datamaddnag, datmadnag, datamadng, datamaddn, datmadaan, datmaddang, datamandg, datamandng, datamndang, datamndg, datamandnag, datamddang, datamadanng, datamdaang, datamandaan, 데이터마강, 데이터마당ㅎ, 데마당, 데이당, 데이터마광, 데이터마갱, 데이터마경, 데이터마공, 데이터마구, 데이터마금, 데이터마긍, 데이터마깅, 데이터마당h, 데이터마당ㅏ, 데이터마당ㅣ, 데이터마당ㅗ, 데이터마당ㅜ, 데마강, 데마광, 데마갱, 데마경, 데마공, 데마구, 데마금, 데마긍, 데마깅, 데이강, 데이광, 데이갱, 데이경, 데이공, 데이구, 데이금, 데이긍, 데이깅, 데이터마닿, 데이터마당ㅅ, 데이타마땅, 데이터마닫, 대이타마당, 데이터마다, 데터마당, 데터마땅, 데에타마당, 데이타마랑, 데이타마강, 데이터마단, 데이터마덩, 데이터마닿ㅎ, 데이터마닿ㅇ, 데이터마동, 데이타마당ㅎ, 데이터마다ㅇ, 데이터마닿ㅁ, stbery.us, stbbery.us, sterry.us, stbrry.us, stberrry.us, stbrrry.us, stberyy.us, stbrryy.us, stbrey.us, stberr.us, stberri.us, stb3rry.us, stberr7.us, stberriy.us, stberru.us, stberruy.us, stberruu.us, stberrty.us, stberrsy.us, stbrryi.us, stberrryy.us, stbrrryy.us, stberrri.us, stbrery.us, stbary.us, stbaryy.us, stberrih.us, stberrey.us, stberrie.us, stberriey.us, stberrui.us, stbrri.us, stbbery.us, stbry.us, stburry.us, stbbry.us, stberruyy.us, stberrru.us, stberruus.us, stberrr.us, stbery7.us, stberrt.us, stberroi.us, strawbery.us, strawbrry.us, strawberrry.us, straberry.us, strwberry.us, stawberry.us, starwberry.us, straawberry.us, sttrawberry.us, straawbery.us, strowberry.us, strawberyy.us, strawbary.us, strwaberry.us, sttrawbry.us, strabry.us, strabery.us, straaberry.us, strawbbery.us, straberiy.us, strawbery7.us, strawberru.us, strawberyh.us, strawberri.us, strawberrie.us, strawberriey.us, strawbarry, 스트로베리ㅎ, cd, cdd, cddd, ccd, ccds, cds, cdss, cdz, cdzz, cxcd, cxd, czd, cfd, cbd, cnd, ckd, vd, xd, zd, cds, cd's, cd-s, cd., cd/, cd\, cd0, cd1, cd2, cd9, ccd., cdd., cddd., cds., cdds, cdz., cdzz., cdplayer, cdplayers, cdplyaer, cdplarer, cdplaeyr, cdplaer, cdplayr, cdplayrr, cdrom, cd-room, cdroms, cd-roms, cdromz, cdro, cdromm, cdromn, ced, cid, cad, cud, cod, dc, dcd, c-d, c_d, cdt, cdsu, cdo, cd0s, cnd, cpd, cld, cmd, cddr, cdjr, cdmus, cdmsu, cdmm, cdm, cdmu, cdms, mortgage, mortgag, mortgagg, mortgae, mortgaeg, mortage, mortgaje, mortgagge, morgage, morgaje, mortg, mortgagor, mortgagorrr, mortgager, mortgagerr, mortggage, mortggag, mortgags, mortgaged, mortgaed, mortgagd, mortagged, mortgaage, moortgage, mortgaagee, mortagee, mortgaggee, mortghage, mortgaghe, mortgahge, mortgagey, mortgaj, mortga, mortgg, mrtgage, mrortgage, mortggae, mortgagae, morgtage, morgtgage, mortrgage, mortgatge, mortge, morgae, morgaege, mortgee, mortgajee, mortgaga, mortgege, motrgage, mortggagee, mortaga, mortagg, mortggge, worldbank, world bank, wrldbank, worldbnk, wroldbank, worldbannk, worldban, worldbankk, wordbank, wordlbank, worldbunk, wolrdbank, worlbank, worlbdaank, worldbank.org, world-bank, worldbanks, worldbnaks, worldbankc, worldbanq, worldbanc, worldbajk, worldbamk, worldbznk, wbank, wbanks, wbnk, wbankk, wrldb, wldb, worldbankg, worldbankf, worldbankd, wroldbnk, wordlbk, worlbak, wrldbnk, worlbnk, worldb, wrldb, worldbk, worlbdnk, wolrdbnk, worlldbank, worledbank, worldbannk, wworldbank, worlddbank, worldbaank, worldbqnk, worldbamk, worldbzank, worlebank, worldbunk, worldbankkk, worldbankx, worldbankz, worldbajk, worldbamc, worldbznc, fed, feds, fead, fedd, fedz, fedzz, fead, fad, fedr, fedrr, fead, federal, federl, fedral, federrl, federall, federalreserve, federal reserve, fedreserve, fedralreserve, fedresreve, fedralresrv, fedrsrv, fedrsrv., fedrsrve, fedrserve, federalresrv, fedreserv, fedresrv, fedrsrv, federalreseve, federalreseerve, fedralreseve, federalrsve, fedreservebank, fedresrvbank, fedbank, federalrsrv, fedralresrv, federalresrv, fedrrserve, fedralreservebank, fedreservebnk, fedralbnk, fedralbank, federalbnk, fedrrservebank, fedreserveb, fedreservebb, fedreservebn, zillow, zilo, zilow, ziloow, zzillow, ziloow, ziloo, zilo, zillw, zllow, zilloww, zilooww, zlloo, zilo.com, zillow.com, zillo.com, zilow.com, ziloow.com, zillowh, zillowp, zillowq, zillowz, zill0w, zill0, zil1ow, zilloe, zillou, zilloi, zilloa, zillowz, zillox, zilllow, zillwow, ziloww, houseprice, housepric, houseprics, houseprize, housepriz, housprice, huseprice, houseprcie, houseprc, housprce, housep, housepp, housepc, houseprices, housepricez, housepricex, houspricez, houspriz, housp, housepryce, houspricey, houspryc, housepricr, housepricer, houspricer, houspriz, houspryz, houspreec, housprix, housprcez, hprice, hprices, hpirce, economic data hub, macro indicators, FRED, Federal Reserve Economic Data, World Bank data, mortgage rates, CD rates, housing price index, dashboards" />
+ <meta name="keywords" content="DataMadang, economic data, FRED, Federal Reserve, World Bank, mortgage rates, CD rates, housing price index, macro indicators, financial dashboard, economic dashboard, golf handicap, golf ranking" />
  <meta name="theme-color" content="#ffffff" />
  <meta name="author" content="DataMadang" />
  <link rel="preconnect" href="https://www.googletagmanager.com" />
@@ -45,9 +45,9 @@
  "@context": "https://schema.org",
  "@type": "WebPage",
  "name": "DataMadang",
- "alternateName": ["", "data madang", "data_madang", "data-madang", "datamdag", "datamading", "datamadnag", "datamaddnag", "datmadnag", "datamadng", "datamaddn", "datmadaan", "datmaddang", "datamandg", "datamandng", "datamndang", "datamndg", "datamandnag", "datamddang", "datamadanng", "datamdaang", "datamandaan", "데이터마강", "데이터마당ㅎ", "데마당", "데이당", "데이터마광", "데이터마갱", "데이터마경", "데이터마공", "데이터마구", "데이터마금", "데이터마긍", "데이터마깅", "데이터마당h", "데이터마당ㅏ", "데이터마당ㅣ", "데이터마당ㅗ", "데이터마당ㅜ", "데마강", "데마광", "데마갱", "데마경", "데마공", "데마구", "데마금", "데마긍", "데마깅", "데이강", "데이광", "데이갱", "데이경", "데이공", "데이구", "데이금", "데이긍", "데이깅", "데이터마닿", "데이터마당ㅅ", "데이타마땅", "데이터마닫", "대이타마당", "데이터마다", "데터마당", "데터마땅", "데에타마당", "데이타마랑", "데이타마강", "데이터마단", "데이터마덩", "데이터마닿ㅎ", "데이터마닿ㅇ", "데이터마동", "데이타마당ㅎ", "데이터마다ㅇ", "데이터마닿ㅁ", "stbery.us", "stbbery.us", "sterry.us", "stbrry.us", "stberrry.us", "stbrrry.us", "stberyy.us", "stbrryy.us", "stbrey.us", "stberr.us", "stberri.us", "stb3rry.us", "stberr7.us", "stberriy.us", "stberru.us", "stberruy.us", "stberruu.us", "stberrty.us", "stberrsy.us", "stbrryi.us", "stberrryy.us", "stbrrryy.us", "stberrri.us", "stbrery.us", "stbary.us", "stbaryy.us", "stberrih.us", "stberrey.us", "stberrie.us", "stberriey.us", "stberrui.us", "stbrri.us", "stbbery.us", "stbry.us", "stburry.us", "stbbry.us", "stberruyy.us", "stberrru.us", "stberruus.us", "stberrr.us", "stbery7.us", "stberrt.us", "stberroi.us", "strawbery.us", "strawbrry.us", "strawberrry.us", "straberry.us", "strwberry.us", "stawberry.us", "starwberry.us", "straawberry.us", "sttrawberry.us", "straawbery.us", "strowberry.us", "strawberyy.us", "strawbary.us", "strwaberry.us", "sttrawbry.us", "strabry.us", "strabery.us", "straaberry.us", "strawbbery.us", "straberiy.us", "strawbery7.us", "strawberru.us", "strawberyh.us", "strawberri.us", "strawberrie.us", "strawberriey.us", "strawbarry", "스트로베리ㅎ", "cd", "cdd", "cddd", "ccd", "ccds", "cds", "cdss", "cdz", "cdzz", "cxcd", "cxd", "czd", "cfd", "cbd", "cnd", "ckd", "vd", "xd", "zd", "cd's", "cd-s", "cd.", "cd/", "cd\\", "cd0", "cd1", "cd2", "cd9", "ccd.", "cdd.", "cddd.", "cds.", "cdds", "cdz.", "cdzz.", "cdplayer", "cdplayers", "cdplyaer", "cdplarer", "cdplaeyr", "cdplaer", "cdplayr", "cdplayrr", "cdrom", "cd-room", "cdroms", "cd-roms", "cdromz", "cdro", "cdromm", "cdromn", "ced", "cid", "cad", "cud", "cod", "dc", "dcd", "c-d", "c_d", "cdt", "cdsu", "cdo", "cd0s", "cpd", "cld", "cmd", "cddr", "cdjr", "cdmus", "cdmsu", "cdmm", "cdm", "cdmu", "cdms", "mortgage", "mortgag", "mortgagg", "mortgae", "mortgaeg", "mortage", "mortgaje", "mortgagge", "morgage", "morgaje", "mortg", "mortgagor", "mortgagorrr", "mortgager", "mortgagerr", "mortggage", "mortggag", "mortgags", "mortgaged", "mortgaed", "mortgagd", "mortagged", "mortgaage", "moortgage", "mortgaagee", "mortagee", "mortgaggee", "mortghage", "mortgaghe", "mortgahge", "mortgagey", "mortgaj", "mortga", "mortgg", "mrtgage", "mrortgage", "mortggae", "mortgagae", "morgtage", "morgtgage", "mortrgage", "mortgatge", "mortge", "morgae", "morgaege", "mortgee", "mortgajee", "mortgaga", "mortgege", "motrgage", "mortggagee", "mortaga", "mortagg", "mortggge", "worldbank", "world bank", "wrldbank", "worldbnk", "wroldbank", "worldbannk", "worldban", "worldbankk", "wordbank", "wordlbank", "worldbunk", "wolrdbank", "worlbank", "worlbdaank", "worldbank.org", "world-bank", "worldbanks", "worldbnaks", "worldbankc", "worldbanq", "worldbanc", "worldbajk", "worldbamk", "worldbznk", "wbank", "wbanks", "wbnk", "wbankk", "wrldb", "wldb", "worldbankg", "worldbankf", "worldbankd", "wroldbnk", "wordlbk", "worlbak", "wrldbnk", "worlbnk", "worldb", "worldbk", "worlbdnk", "wolrdbnk", "worlldbank", "worledbank", "wworldbank", "worlddbank", "worldbaank", "worldbqnk", "worldbzank", "worlebank", "worldbankkk", "worldbankx", "worldbankz", "worldbajk", "worldbamc", "worldbznc", "fed", "feds", "fead", "fedd", "fedz", "fedzz", "fad", "fedr", "fedrr", "federal", "federl", "fedral", "federrl", "federall", "federalreserve", "federal reserve", "fedreserve", "fedralreserve", "fedresreve", "fedralresrv", "fedrsrv", "fedrsrv.", "fedrsrve", "fedrserve", "federalresrv", "fedreserv", "fedresrv", "federalreseve", "federalreseerve", "fedralreseve", "federalrsve", "fedreservebank", "fedresrvbank", "fedbank", "federalrsrv", "fedralresrv", "federalresrv", "fedrrserve", "fedralreservebank", "fedreservebnk", "fedralbnk", "fedralbank", "federalbnk", "fedrrservebank", "fedreserveb", "fedreservebb", "fedreservebn", "zillow", "zilo", "zilow", "ziloow", "zzillow", "ziloo", "zillw", "zllow", "zilloww", "zilooww", "zlloo", "zilo.com", "zillow.com", "zillo.com", "zilow.com", "ziloow.com", "zillowh", "zillowp", "zillowq", "zillowz", "zill0w", "zill0", "zil1ow", "zilloe", "zillou", "zilloi", "zilloa", "zillox", "zilllow", "zillwow", "ziloww", "houseprice", "housepric", "houseprics", "houseprize", "housepriz", "housprice", "huseprice", "houseprcie", "houseprc", "housprce", "housep", "housepp", "housepc", "houseprices", "housepricez", "housepricex", "houspricez", "houspriz", "housp", "housepryce", "houspricey", "houspryc", "housepricr", "housepricer", "houspricer", "houspryz", "houspreec", "housprix", "housprcez", "hprice", "hprices", "hpirce"],
+ "alternateName": ["data madang", "data_madang", "data-madang", "데이터마당"],
  "description": "DataMadang Economic Data Hub: Explore Federal Reserve (FRED), World Bank, Mortgage, CD rates, and Housing Price Index dashboards.",
- "keywords": "datamadang,, economic data, fred, world bank, mortgage rates ",
+ "keywords": "datamadang, economic data, fred, world bank, mortgage rates, cd rates, housing price index, golf handicap",
  "about": [
  {"@type":"Thing","name":"DataMadang"},
  {"@type":"Thing","name":" Economic Data Hub"},
@@ -62,16 +62,9 @@
 
  <style>
  :root{
- --bg: #f5f7fb;
- --panel: #ffffff;
- --ink: #0f172a;
- --muted: #475569;
- --brand: #2563eb;
- --accent: #06b6d4;
- --radius: 16px;
- --shadow: 0 6px 24px rgba(16,24,40,.06);
- --maxw: 1180px;
- --border: 1px solid #e5e7eb;
+ --bg: #f5f7fb; --panel: #ffffff; --ink: #0f172a; --muted: #475569;
+ --brand: #2563eb; --accent: #06b6d4; --radius: 16px;
+ --shadow: 0 6px 24px rgba(16,24,40,.06); --maxw: 1180px; --border: 1px solid #e5e7eb;
  }
 
  *,*::before,*::after{box-sizing:border-box}
@@ -86,7 +79,7 @@
  -webkit-text-size-adjust:100%; text-size-adjust:100%;
  }
 
- /* Decorative background (disabled on small screens for performance) */
+ /* Decorative background */
  #bg { position:fixed; inset:0; width:100vw; height:100vh; object-fit:cover;
  z-index:-2; opacity:.07; filter:saturate(.9) contrast(1.05); pointer-events:none; }
  #scrim { position:fixed; inset:0; z-index:-1;
@@ -284,24 +277,6 @@
  </div>
  </article>
 
-  <!-- Housing Price Index (NEW) -->
- <article class="card" id="housing">
- <h2>Housing Price Index</h2>
- <p>
-  Explore regional housing price indexes with state filters, Top/Bottom rankings, and percentile views.
-  Single‑file dashboard optimized for GitHub Pages.
- </p>
- <ul>
-  <li>Large legend + search</li>
-  <li>Top/Bottom N &amp; percentiles</li>
-  <li>PNG &amp; CSV export</li>
- </ul>
- <div class="cta">
-  <!-- <a class="btn" href="housing/housing.html" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a> -->
-  <!-- <a class="btn" href="/housing/" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a> -->
-  <a class="btn" href="/housing/housing_r.html" aria-label="Open Housing Price Index Dashboard 1"> Open Housing Dashboard</a>
- </div>
- </article>
 
  <!-- Full-width explainer -->
  <aside class="explainer" id="how-to">
@@ -310,7 +285,7 @@
  <p><strong>Connect macro to personal finance:</strong> Mortgage and CD sections translate macro drivers into real‑world rates you can act on.</p>
  <p><strong>Zoom into housing:</strong> Use the Housing Price Index tool to analyze metro/state trends and export series for your models.</p>
  <p><strong>Export anything:</strong> Each dashboard supports downloading the data/visuals—handy for weekly updates or presentations.</p>
- <p class="sr-only">Keywords: DataMadang, economic data hub, FRED, Federal Reserve Economic Data, World Bank indicators, GDP, CPI, unemployment, mortgage rates, CD rates, APY, US economy, global economy, housing price index. Common misspellings: datamadang, data_madang, data-madang, madang data hub, datamdag, datamading, datamadnag, datamaddnag, datmadnag, datamadng, datamaddn, datmadaan, datmaddang, datamandg, datamandng, datamndang, datamndg, datamandnag, datamddang, datamadanng, datamdaang, datamandaan, 데이터마강, 데이터마당ㅎ, 데마당, 데이당, 데이터마광, 데이터마갱, 데이터마경, 데이터마공, 데이터마구, 데이터마금, 데이터마긍, 데이터마깅, 데이터마당h, 데이터마당ㅏ, 데이터마당ㅣ, 데이터마당ㅗ, 데이터마당ㅜ, 데마강, 데마광, 데마갱, 데마경, 데마공, 데마구, 데마금, 데마긍, 데마깅, 데이강, 데이광, 데이갱, 데이경, 데이공, 데이구, 데이금, 데이긍, 데이깅, 데이터마닿, 데이터마당ㅅ, 데이타마땅, 데이터마닫, 대이타마당, 데이터마다, 데터마당, 데터마땅, 데에타마당, 데이타마랑, 데이타마강, 데이터마단, 데이터마덩, 데이터마닿ㅎ, 데이터마닿ㅇ, 데이터마동, 데이타마당ㅎ, 데이터마다ㅇ, 데이터마닿ㅁ, stbery.us, stbbery.us, sterry.us, stbrry.us, stberrry.us, stbrrry.us, stberyy.us, stbrryy.us, stbrey.us, stberr.us, stberri.us, stb3rry.us, stberr7.us, stberriy.us, stberru.us, stberruy.us, stberruu.us, stberrty.us, stberrsy.us, stbrryi.us, stberrryy.us, stbrrryy.us, stberrri.us, stbrery.us, stbary.us, stbaryy.us, stberrih.us, stberrey.us, stberrie.us, stberriey.us, stberrui.us, stbrri.us, stbbery.us, stbry.us, stburry.us, stbbry.us, stberruyy.us, stberrru.us, stberruus.us, stberrr.us, stbery7.us, stberrt.us, stberroi.us, strawbery.us, strawbrry.us, strawberrry.us, straberry.us, strwberry.us, stawberry.us, starwberry.us, straawberry.us, sttrawberry.us, straawbery.us, strowberry.us, strawberyy.us, strawbary.us, strwaberry.us, sttrawbry.us, strabry.us, strabery.us, straaberry.us, strawbbery.us, straberiy.us, strawbery7.us, strawberru.us, strawberyh.us, strawberri.us, strawberrie.us, strawberriey.us, strawbarry, 스트로베리ㅎ, cd, cdd, cddd, ccd, ccds, cds, cdss, cdz, cdzz, cxcd, cxd, czd, cfd, cbd, cnd, ckd, vd, xd, zd, cd's, cd-s, cd., cd/, cd\, cd0, cd1, cd2, cd9, ccd., cdd., cddd., cds., cdds, cdz., cdzz., cdplayer, cdplayers, cdplyaer, cdplarer, cdplaeyr, cdplaer, cdplayr, cdplayrr, cdrom, cd-room, cdroms, cd-roms, cdromz, cdro, cdromm, cdromn, ced, cid, cad, cud, cod, dc, dcd, c-d, c_d, cdt, cdsu, cdo, cd0s, cpd, cld, cmd, cddr, cdjr, cdmus, cdmsu, cdmm, cdm, cdmu, cdms, mortgage, mortgag, mortgagg, mortgae, mortgaeg, mortage, mortgaje, mortgagge, morgage, morgaje, mortg, mortgagor, mortgagorrr, mortgager, mortgagerr, mortggage, mortggag, mortgags, mortgaged, mortgaed, mortgagd, mortagged, mortgaage, moortgage, mortgaagee, mortagee, mortgaggee, mortghage, mortgaghe, mortgahge, mortgagey, mortgaj, mortga, mortgg, mrtgage, mrortgage, mortggae, mortgagae, morgtage, morgtgage, mortrgage, mortgatge, mortge, morgae, morgaege, mortgee, mortgajee, mortgaga, mortgege, motrgage, mortggagee, mortaga, mortagg, mortggge, worldbank, world bank, wrldbank, worldbnk, wroldbank, worldbannk, worldban, worldbankk, wordbank, wordlbank, worldbunk, wolrdbank, worlbank, worlbdaank, worldbank.org, world-bank, worldbanks, worldbnaks, worldbankc, worldbanq, worldbanc, worldbajk, worldbamk, worldbznk, wbank, wbanks, wbnk, wbankk, wrldb, wldb, worldbankg, worldbankf, worldbankd, wroldbnk, wordlbk, worlbak, wrldbnk, worlbnk, worldb, worldbk, worlbdnk, wolrdbnk, worlldbank, worledbank, wworldbank, worlddbank, worldbaank, worldbqnk, worldbzank, worlebank, worldbankkk, worldbankx, worldbankz, worldbajk, worldbamc, worldbznc, fed, feds, fead, fedd, fedz, fedzz, fad, fedr, fedrr, federal, federl, fedral, federrl, federall, federalreserve, federal reserve, fedreserve, fedralreserve, fedresreve, fedralresrv, fedrsrv, fedrsrv., fedrsrve, fedrserve, federalresrv, fedreserv, fedresrv, federalreseve, federalreseerve, fedralreseve, federalrsve, fedreservebank, fedresrvbank, fedbank, federalrsrv, fedralresrv, federalresrv, fedrrserve, fedralreservebank, fedreservebnk, fedralbnk, fedralbank, federalbnk, fedrrservebank, fedreserveb, fedreservebb, fedreservebn, zillow, zilo, zilow, ziloow, zzillow, ziloo, zillw, zllow, zilloww, zilooww, zlloo, zilo.com, zillow.com, zillo.com, zilow.com, ziloow.com, zillowh, zillowp, zillowq, zillowz, zill0w, zill0, zil1ow, zilloe, zillou, zilloi, zilloa, zillox, zilllow, zillwow, ziloww, houseprice, housepric, houseprics, houseprize, housepriz, housprice, huseprice, houseprcie, houseprc, housprce, housep, housepp, housepc, houseprices, housepricez, housepricex, houspricez, houspriz, housp, housepryce, houspricey, houspryc, housepricr, housepricer, houspricer, houspryz, houspreec, housprix, housprcez, hprice, hprices, hpirce.</p>
+ <p class="sr-only">Keywords: DataMadang, economic data hub, FRED, Federal Reserve Economic Data, World Bank indicators, GDP, CPI, unemployment, mortgage rates, CD rates, APY, US economy, global economy, housing price index, golf handicap ranking.</p>
  </aside>
  
     <!-- Global Rank (Just for Fun) -->
@@ -359,7 +334,7 @@
 
  <script>
  // Only load decorative background on screens wider than 540px
- (function{
+ (function(){
  var el = document.getElementById('bg');
  if (window.matchMedia && window.matchMedia('(max-width: 540px)').matches) {
  // skip loading to improve mobile performance
@@ -371,8 +346,8 @@
  for (var j = 1; j <= 8; j++) imgs.push('image/index/flower/J' + ('00'+j).slice(-3) + '.jpg');
  var eng = ['image/index/engineering/image (1).png','image (2).png','image (3).png','image (4).png'].map(function(n){return 'image/index/engineering/'+n;});
  imgs = imgs.concat(eng);
- if(el){ el.src = imgs[Math.floor(Math.random*imgs.length)]; }
- });
+ if(el){ el.src = imgs[Math.floor(Math.random() * imgs.length)]; }
+ })();
  </script>
 </body>
 </html>
